@@ -497,3 +497,8 @@ gdb_test "python print(gdb.convenience_variable('cvar3'))" "None" \
     "print reset convenience variable from python"
 gdb_test "print \$cvar3" "= void" \
     "print reset convenience variable from CLI"
+
+# From PR python/23544.  This used to crash.
+gdb_test "python gdb.execute(\"interp mi '-break-list'\")" \
+    ".*done,BreakpointTable=.*" \
+    "execute command using interp mi"
